[package]
name = "data-racer"
authors =["Victor Alan Varela"]
version = "0.1.1"
edition = "2021"
description = "Is a true random number generator that uses data races to generate random numbers"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
opt-level = 0

[dependencies]
rand = "0.8.5"
blake3 = "1.4.1"

[profile.release]
opt-level = 0

[profile.dev]
opt-level = 0
mir-opt-level = 0


[lib]
opt-level = 0
mir-opt-level = 0
