[package]
name = "data-racer"
authors =["Victor Alan Varela", "Mario Gandia"]
version = "0.2.1"
edition = "2021"
description = "Is a true random number generator that uses data races to generate random numbers"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
opt-level = 0

[dependencies]
rand = "0.8.5"
blake3 = "1.4.1"

